--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "## Topics",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js",
-    "start": "node index",
+    "server": "nodemon server.js",
+    "start": "node server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
